spelling mistakes lol

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                             <span class="badge rust">Rust</span>
                             <span class="badge r">R</span>
                             <span class="badge bash">Bash</span>
-                            <span class="badge sql">SQL</span>
+                            <span class="badge verilog">Verilog</span>
+                            <span class="badge assembly"> x86 Assembly</span>
                         </div>
                     </div>
                     
@@ -66,10 +67,6 @@
                             <span class="badge css">CSS</span>
                             <span class="badge js">JavaScript</span>
                             <span class="badge react">React</span>
-                            <span class="badge node">Node.js</span>
-                            <span class="badge express">Express.js</span>
-                            <span class="badge mongo">MongoDB</span>
-                            <span class="badge d3">D3.js</span>
                         </div>
                     </div>
                 </div>
@@ -80,7 +77,7 @@
         <div id="projects" class="page hidden">
             <h1 class="page-title">Projects</h1>
             <div class="content">
-                <p>Coming soon! This section will showcase my various projects in cybersecurity, AI, and software development.</p>
+                <p>Coming soon!</p>
             </div>
         </div>
 
@@ -119,9 +116,9 @@
             <h1 class="page-title">Contact</h1>
             <div class="content">
                 <p>Feel free to reach out to me!</p>
-                <p>📧 Email: [your-email@example.com]</p>
-                <p>💼 LinkedIn: [your-linkedin]</p>
-                <p>🐙 GitHub: [your-github]</p>
+                <p>📧 Email: dpal1@terpmail.umd.edu</p>
+                <p>💼 LinkedIn: </p>
+                <p>🐙 GitHub: dpal0</p>
             </div>
         </div>
 
