--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div id="resume" class="page hidden">
             <h1 class="page-title">Resume</h1>
             <div class="content">
-                <p>Download my resume or view it online.</p>
-                <p><a href="#" style="color: #c9a96e; text-decoration: none;">📥 Download PDF</a></p>
+                <p>My resume !:p <p>
+                <a href="./diksha_Apple_MLE.pdf" target="_blank">View My Resume</a>
             </div>
         </div>
     </div>
