--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h1 class="page-title">Resume</h1>
             <div class="content">
                 <p>My resume !:p <p>
-                <a href="./diksha_Apple_MLE.pdf" target="_blank">View My Resume</a>
+                <a href="./resume.pdf" target="_blank">View My Resume</a>
             </div>
         </div>
     </div>
